--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,11 @@
 	
 
 	<properties>
-		<java.version>1.8</java.version>
-		<jacoco.version>0.8.3</jacoco.version>
-<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
-<sonar.language>java</sonar.language>
-	</properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+  </properties>
+
 
 	<dependencies>
 		<dependency>
