--- a/src/main/resources/application-LAPTOP-EG5UITQA.properties
+++ b/src/main/resources/application-LAPTOP-EG5UITQA.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://172.19.0.2:3306/cybage?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
+spring.datasource.url = jdbc:mysql:///ssk?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = ssk95
 
